# teleclaude

./: .gitignore  CLAUDE.md  README.md  handoff-teleclaude.md  pyproject.toml
.github/workflows/: publish.yml
example/: CLAUDE.md  main.py
teleclaude/: __init__.py  _availability.py  _claude_menu.py  _claude_runner.py  _polling.py  _telegram.py  _voice.py  base_bot.py  self_update.py  session_channel.py  session_cli.py
